@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Type.cxx,v 1.6.2.6.2.6 2002/04/27 18:34:11 easysw Exp $"
+// "$Id: Fl_Type.cxx,v 1.6.2.6.2.7 2002/04/28 08:42:32 easysw Exp $"
 //
 // Widget type code for the Fast Light Tool Kit (FLTK).
 //
@@ -139,8 +139,8 @@ void Widget_Browser::item_draw(void *v, int x, int y, int, int) const {
   x += 3 + 16 + l->level * 10;
   if (l->new_selected) fl_color(fl_contrast(FL_BLACK,FL_SELECTION_COLOR));
   else fl_color(FL_BLACK);
-  if (l->is_public() == 0) unlock_pixmap.draw(x - 16, y);
-  else if (l->is_public() > 0) lock_pixmap.draw(x - 16, y);
+  if (l->is_public() == 0) lock_pixmap.draw(x - 16, y);
+  else if (l->is_public() > 0) unlock_pixmap.draw(x - 16, y);
   if (l->is_parent()) {
     if (!l->next || l->next->level <= l->level) {
       if (l->open_!=(l==pushedtitle)) {
@@ -682,5 +682,5 @@ void Fl_Type::read_property(const char *c) {
 int Fl_Type::read_fdesign(const char*, const char*) {return 0;}
 
 //
-// End of "$Id: Fl_Type.cxx,v 1.6.2.6.2.6 2002/04/27 18:34:11 easysw Exp $".
+// End of "$Id: Fl_Type.cxx,v 1.6.2.6.2.7 2002/04/28 08:42:32 easysw Exp $".
 //
